--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -177,7 +177,7 @@ a:not([href]):not([tabindex]):focus,a:not([href]):not([tabindex]):hover {color: 
 .timeline .content-text{display:inline-grid; margin: 15px 15px 0 0;flex-basis: 156px; border: 3px solid #00b4d9;border-radius: 20px;overflow: hidden;box-shadow: 5px 3px 3px 1px;}
 .timeline .content-title{background-color: #f0f0f0;padding: 10px;}
 .timeline .experience .content-title:hover{background-color: skyblue;}
-.timeline .experience-content .content-title:hover{cursor: pointer}
+.timeline .experience-content .content-title:hover{cursor: pointer;color: #fff;border-color: #fff;}
 .timeline .content-info{max-width: 300px; padding: 10px;display: none}
 #nav-tabContent{margin-top: 30px;}
 @media(min-width: 500px){
